# netbox-sdk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  NETBOX_UI_TO_TEXTUAL_GUIDELINES.md  PROMPTING-GUIDE.md  README.md  SECURITY-GUIDE.md  generate_command_docs.py  hooks.py  index.html  install.sh  llms.txt  metadata.json  mkdocs.yml  pyproject.toml  run_capture_in_background.sh  sitemap.xml
.github/: CLAUDE.md
.github/workflows/: django-model-builds.yml  docs-capture.yml  docs.yml  lint.yml  main-post-merge.yml  publish-metadata.yml  publish-testpypi.yml  security.yml  test.yml
CLAUDE/: index.html
NETBOX_UI_TO_TEXTUAL_GUIDELINES/: index.html
cli/: index.html
cli/commands/: index.html
cli/demo-profile/: index.html
cli/dynamic-commands/: index.html
cli/graphql/: index.html
command-capture-guide/: index.html
developer/: index.html
developer/architecture/: index.html
developer/design-principles/: index.html
developer/docgen/: index.html
developer/integration-with-proxbox-api/: index.html
developer/package-integration/: index.html
developer/sdk-internals/: index.html
developer/textual-composition/: index.html
django_models_builds/: v2.1.2-django-models-build.json  v2.1.3-django-models-build.json  v2.1.4-django-models-build.json  v2.1.5-django-models-build.json  v2.2-beta1-django-models-build.json  v2.9.5-django-models-build.json  v2.9.6-django-models-build.json  v2.9.7-django-models-build.json  v2.9.8-django-models-build.json  v2.9.9-django-models-build.json  v3.4.10-django-models-build.json  v3.5.0-django-models-build.json  v3.5.1-django-models-build.json  v3.5.2-django-models-build.json  v3.5.3-django-models-build.json  v4.3.7-django-models-build.json  v4.4.10-django-models-build.json  v4.5.5-django-models-build.json  v4.5.7-django-models-build.json  v4.5.8-django-models-build.json  v4.5.9-django-models-build.json  v4.6.0-beta1-django-models-build.json  v4.6.0-beta2-django-models-build.json
docs/: CLAUDE.md  NETBOX_UI_TO_TEXTUAL_GUIDELINES.md  NETBOX_UI_TO_TEXTUAL_GUIDELINES.pt.md  command-capture-guide.md  command-capture-guide.pt.md  generate_command_docs.py  hooks.py  index.md  index.pt.md  run_capture_in_background.sh
docs/assets/: extra.css
docs/cli/: commands.md  commands.pt.md  demo-profile.md  demo-profile.pt.md  dynamic-commands.md  dynamic-commands.pt.md  graphql.md  graphql.pt.md  index.md  index.pt.md
docs/developer/: architecture.md  architecture.pt.md  design-principles.md  design-principles.pt.md  docgen.md  docgen.pt.md  index.md  index.pt.md  integration-with-proxbox-api.md  integration-with-proxbox-api.pt.md  package-integration.md  package-integration.pt.md  sdk-internals.md  sdk-internals.pt.md  textual-composition.md  textual-composition.pt.md
docs/getting-started/: configuration.md  configuration.pt.md  index.md  index.pt.md  installation.md  installation.pt.md  quickstart.md  quickstart.pt.md
docs/mock-api/: bulk-operations.md  bulk-operations.pt.md  crud.md  crud.pt.md  index.md  index.pt.md  pagination-filtering.md  pagination-filtering.pt.md  pytest-integration.md  pytest-integration.pt.md  standalone-server.md  standalone-server.pt.md
docs/reference/: command-examples.md
docs/sdk/: authentication.md  authentication.pt.md  error-handling.md  error-handling.pt.md  facade.md  facade.pt.md  index.md  index.pt.md  making-requests.md  making-requests.pt.md  schema.md  schema.pt.md  typed.md  typed.pt.md
getting-started/: index.html
netbox_cli/: CLAUDE.md  __init__.py  api.py  app_runtime.py  cli.py  cli_support.py  config.py  demo.py  demo_auth.py  dev.py  dev_tui.py  dev_tui.tcss  django_model.py  django_model_tui.tcss  docgen_capture.py  docgen_guidelines.md  docgen_specs.py  dynamic.py  http_cache.py  logging_runtime.py  logs_tui.tcss  markdown_output.py  output_safety.py  profile_cache.py  runtime.py  schema.py  services.py  support.py  theme_registry.py  trace_ascii.py  tui.py  tui.tcss  tui_simulation.py  ui_common.tcss
netbox_sdk/: CLAUDE.md  __init__.py  client.py  config.py  demo_auth.py  exceptions.py  facade.py  formatting.py  http_cache.py  http_ssl.py  logging_runtime.py  mock_main.py  plugin_discovery.py  schema.py  services.py  trace_ascii.py  typed_api.py  typed_runtime.py  versioning.py
netbox_tui/: CLAUDE.md  __init__.py  app.py  chrome.py  cli_completions.py  cli_tui.py  dev_app.py  dev_rendering.py  dev_state.py  django_model_app.py  django_model_state.py  filter_overlay.py  graphql_app.py  graphql_state.py  graphql_tui.tcss  lifecycle.py  login_modal.py  logo_render.py  logs_app.py  logs_tui.tcss  navigation.py  panels.py  plugin_discovery.py  ssl_verify_support.py  state.py  theme_registry.py  tui.tcss  widgets.py
pt/: index.html
reference/: CLAUDE.md  PYNETBOX.md
scripts/: build_metadata.py  generate_typed_sdk.py  tui_screenshots.py
sdk/: CLAUDE.md  __init__.py  client.py  http_cache.py  index.html  plugin_discovery.py  schema.py  services.py
search/: search_index.json
snippets/: package-version.txt  pip-pinned-all.txt  pip-pinned-cli.txt  pip-pinned-sdk.txt  pip-pinned-tui.txt  uv-pinned-cli.txt
tests/: CLAUDE.md  conftest.py  test_api_auth.py  test_api_cache.py  test_cli_error_handling.py  test_cli_new_options.py  test_cli_trace.py  test_cli_tui.py  test_cli_tui_theme.py  test_client_header_scope.py  test_client_session_pooling.py  test_config_profiles.py  test_demo_auth.py  test_demo_cli.py  test_demo_runtime_refresh.py  test_dev_tui.py  test_django_model_tui.py  test_docgen_paths.py  test_docgen_specs.py  test_docs_alignment.py  test_graphql.py  test_graphql_tui.py  test_http_ssl.py  test_instance_isolation.py  test_logging_runtime.py  test_login_modal.py  test_logo_render.py  test_logs_tui.py  test_markdown_output.py  test_mock_api.py  test_no_hardcoded_colors.py  test_output_safety.py  test_pagination_cursor.py  test_plugin_discovery.py  test_return_annotations.py  test_schema_index.py  test_schema_version_detection.py  test_sdk_completeness.py  test_sdk_imports.py  test_sdk_pynetbox_parity.py  (+10 more)
tui/: index.html
(+285 files in other folders)
