[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-sdk"
version = "0.0.4"
description = "API-first NetBox CLI + Textual TUI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Emerson Felipe", email = "emerson@netdevopsbr.com" }
]
maintainers = [
  {name = "Emerson Felipe", email = "emerson@netdevopsbr.com"}
]
keywords = ["netbox", "terminal", "netbox-integration", "tui", "cli", "terminal", "api", "integration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.9.0",
  "pydantic>=2.0",
  "email-validator>=2.2.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
sdk = []
tui = ["textual>=0.62.0"]
cli = ["typer>=0.12.0"]
demo = ["playwright>=1.52.0"]
all = [
  "textual>=0.62.0",
  "typer>=0.12.0",
  "playwright>=1.52.0",
]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.11.0",
  "textual>=0.62.0",
  "typer>=0.12.0",
  "playwright>=1.52.0",
]
docs = [
  "mkdocs-material>=9.5",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.11.0",
  "textual>=0.62.0",
  "typer>=0.12.0",
  "playwright>=1.52.0",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.scripts]
nbx = "netbox_cli:main"

[project.urls]
Homepage = "https://github.com/emersonfelipesp/netbox-sdk"
Documentation = "https://emersonfelipesp.com/netbox-cli"
Repository = "https://github.com/emersonfelipesp/netbox-sdk"
Issues = "https://github.com/emersonfelipesp/netbox-sdk/issues"
Changelog = "https://github.com/emersonfelipesp/netbox-sdk/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_sdk*", "netbox_tui*", "netbox_cli*"]

[tool.setuptools.package-data]
netbox_sdk = ["reference/openapi/*.json", "py.typed"]
netbox_tui = ["*.tcss", "themes/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -n auto"
timeout = 60
markers = [
  "suite_sdk: tests owned by the standalone netbox_sdk package",
  "suite_cli: tests owned by the optional netbox_cli package",
  "suite_tui: tests owned by the optional netbox_tui package",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "ANN201",
  "ANN202",
  "ANN204",
  "E",
  "F",
  "I",
  "UP",
  "W",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["netbox_sdk", "netbox_tui", "netbox_cli"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
