[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-sdk"
version = "0.0.8"
description = "SDK-first NetBox toolkit with Python SDK, CLI, and Textual TUIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Emerson Felipe", email = "emerson@netdevopsbr.com" }
]
maintainers = [
  {name = "Emerson Felipe", email = "emerson@netdevopsbr.com"}
]
keywords = ["netbox", "terminal", "netbox-integration", "tui", "cli", "terminal", "api", "integration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.13.4",
  "pydantic>=2.12.5",
  "email-validator>=2.3.0",
  "rich>=14.3.3",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
sdk = []
tui = ["textual>=8.2.0"]
cli = ["typer>=0.24.1"]
demo = ["playwright>=1.58.0"]
mock = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]
all = [
  "textual>=8.2.0",
  "typer>=0.24.1",
  "playwright>=1.58.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.8",
  "ty>=0.0.1a16",
  "textual>=8.2.0",
  "typer>=0.24.1",
  "playwright>=1.58.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
]
docs = [
  "mkdocs-material>=9.7.6",
  "mkdocs-static-i18n[material]>=1.3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.8",
  "ty>=0.0.1a16",
  "textual>=8.2.0",
  "typer>=0.24.1",
  "playwright>=1.58.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
]
docs = [
  "mkdocs-material>=9.7.6",
  "mkdocs-static-i18n[material]>=1.3.0",
]

[project.scripts]
nbx = "netbox_cli:main"
nbx-mock = "netbox_sdk.mock_main:run"

[project.urls]
Homepage = "https://github.com/emersonfelipesp/netbox-sdk"
Documentation = "https://emersonfelipesp.github.io/netbox-sdk/"
Repository = "https://github.com/emersonfelipesp/netbox-sdk"
Issues = "https://github.com/emersonfelipesp/netbox-sdk/issues"
Changelog = "https://github.com/emersonfelipesp/netbox-sdk/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_sdk*", "netbox_tui*", "netbox_cli*"]

[tool.setuptools.package-data]
netbox_sdk = ["reference/openapi/*.json", "py.typed"]
netbox_tui = ["*.tcss", "themes/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -n auto"
timeout = 60
markers = [
  "suite_sdk: tests owned by the standalone netbox_sdk package",
  "suite_cli: tests owned by the optional netbox_cli package",
  "suite_tui: tests owned by the optional netbox_tui package",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "ANN201",
  "ANN202",
  "ANN204",
  "E",
  "F",
  "I",
  "UP",
  "W",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["netbox_sdk", "netbox_tui", "netbox_cli"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"examples/**/*.py" = ["ANN"]
"netbox_sdk/typed_versions/*.py" = ["F403", "F405", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = [
  "netbox_sdk/models/**",
  "netbox_sdk/typed_versions/**",
]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
all = "ignore"
